--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
 
 .box{
 	margin-bottom: 10px;
-	margin-right: 153px;
+    margin-right: 53px;
 }
 
 .last-question{
@@ -71,4 +71,14 @@
 	position: absolute;
 	top: 82px;
     left: 548px
+}
+
+input{
+	    width: 32px;
+    height: 32px;
+    vertical-align: middle;
+}
+
+label{
+	vertical-align: middle;
 }
