--- a/css/style.css
+++ b/css/style.css
@@ -53,16 +53,18 @@
 .send{
 	background-color: #103ADA;
     width: 130px;
-    height: 30px;
-    margin-top: 20px;
+    height: 27px;
+    margin-top: 18px;
     margin-left: -8px;
+    padding-top: 7px;
 }
 
-.send p{
+.send a{
 	padding-top: 8px;
     padding-left: 46px;
     font-size: 15px;
     color: #FFFFFF;
+    vertical-align: middle;
 }
 
 .img-text{
