--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 .first-img{
 	    margin: 12px;
 	    position: relative;
+	    display: flex;
 }
 .container{
 	max-width: 1366px;
@@ -22,6 +23,7 @@
 	font-size: 24px;
     color: #707070;
     margin-left: 10px;
+    margin-bottom: 20px;
 }
 
 .all-checkbox{
@@ -42,14 +44,15 @@
     margin-left: -16px;
 }
 
-.container2{
-	width: 1236px;
+.container3{
+	width: 1187px;
+	height: 185px;
+}
+/*width: 1236px;
     height: 185px;
     margin-top: 10px;
     margin-left: -8px;
-    border: solid #707070;
-}
-
+    border: solid #707070;*/
 .send{
 	background-color: #103ADA;
     width: 130px;
@@ -83,4 +86,12 @@ input{
 
 label{
 	vertical-align: middle;
+}
+
+.page2-img{
+	    font-size: 40px;
+    color: #000000;
+    vertical-align: middle;
+    margin-top: 200px;
+    margin-left: 100px;
 }
