--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ body {
     color: #707070;
     padding: 30px 0 40px 20px;
 }
-.last-question label {
+.comment-div label {
     display: block;
 }
 .comment{
@@ -86,11 +86,20 @@ input{
 label{
 	vertical-align: middle;
 }
-
-.page2-img{
-	    font-size: 40px;
-    color: #000000;
-    vertical-align: middle;
-    margin-top: 200px;
-    margin-left: 100px;
+.cover2 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 90px 0 0;
+    margin-bottom: 45px;
 }
+.cover-text2 {
+    font-size: 40px;
+    color: #000000;
+}
+.cover2 img {
+    max-width: 690px;
+    width: 100%;
+}
+
