--- a/css/style.css
+++ b/css/style.css
@@ -60,11 +60,6 @@ body {
 textarea {
     resize: none;
 }
-/*width: 1236px;
-    height: 185px;
-    margin-top: 10px;
-    margin-left: -8px;
-    border: solid #707070;*/
 .send{
 	background-color: #103ADA;
     display: inline-block;
@@ -77,13 +72,13 @@ textarea {
     color: #FFFFFF;
     vertical-align: middle;
 }
-input{
+.box input{
 	width: 32px;
     height: 32px;
     vertical-align: middle;
 }
 
-label{
+.box label{
 	vertical-align: middle;
 }
 .cover2 {
