--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ body {
     width: 100%;
 }
 .cover-text {
+    font-family: 'Segoe UI';
+    font-weight: bold;
     font-size: 40px;
     color: #FFFAFA;
     position: absolute;
@@ -23,11 +25,15 @@ body {
     margin: 20px 0 0;
 }
 .form1-input {  
+    font-family: 'Segoe UI';
+    font-size: 24px;
+    color: #707070;
 	width: 100%;
     height: 60px;
     margin: 10px 0;
 }
 .titles{
+    font-family: 'Segoe UI';
 	font-size: 24px;
     color: #707070;
     padding: 10px 0;
@@ -68,7 +74,9 @@ textarea {
 }
 
 .send a{
-    font-size: 15px;
+    font-family: 'Segoe UI';
+    font-weight: bold;
+    font-size: 24px;
     color: #FFFFFF;
     vertical-align: middle;
 }
@@ -79,6 +87,9 @@ textarea {
 }
 
 .box label{
+    font-family: 'Segoe UI';
+    font-size: 24px;
+    color: #707070;
 	vertical-align: middle;
 }
 .cover2 {
@@ -90,6 +101,8 @@ textarea {
     margin-bottom: 45px;
 }
 .cover-text2 {
+    font-family: 'Segoe UI';
+    font-weight: bold;
     font-size: 40px;
     color: #000000;
 }
