--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'Segoe UI';
-    src: url('..fonts/SegoeUI.eot');
-    src: url('..fonts/SegoeUI.eot?#iefix') format('embedded-opentype'),
-        url('..fonts/SegoeUI.woff2') format('woff2'),
-        url('..fonts/SegoeUI.woff') format('woff'),
-        url('..fonts/SegoeUI.ttf') format('truetype'),
-        url('..fonts/SegoeUI.svg#SegoeUI') format('svg');
+    src: url('../fonts/SegoeUI.eot');
+    src: url('../fonts/SegoeUI.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/SegoeUI.woff2') format('woff2'),
+        url('../fonts/SegoeUI.woff') format('woff'),
+        url('../fonts/SegoeUI.ttf') format('truetype'),
+        url('../fonts/SegoeUI.svg#SegoeUI') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
